// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SpeedDialItem snapshot: default 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown
    classes={[Function]}
    preset={
        Object {
            "avatar": "",
            "button": "",
            "firstItem": "",
            "item": "",
            "label": "",
            "list": "",
            "root": "",
          }
    }
    state="opened"
>
    [Function]
</Unknown>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <a
        className="undefined undefined"
>
        
</a>,
      "className": "undefined ",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          undefined,
          undefined,
        ],
        "className": "undefined undefined",
      },
      "ref": null,
      "rendered": Array [
        undefined,
        undefined,
      ],
      "type": "a",
    },
    "type": "li",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <a
          className="undefined undefined"
>
          
</a>,
        "className": "undefined ",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            undefined,
            undefined,
          ],
          "className": "undefined undefined",
        },
        "ref": null,
        "rendered": Array [
          undefined,
          undefined,
        ],
        "type": "a",
      },
      "type": "li",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`SpeedDialItem snapshot: renderAvatar 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown
    classes={[Function]}
    preset={
        Object {
            "avatar": "",
            "button": "",
            "firstItem": "",
            "item": "",
            "label": "",
            "list": "",
            "root": "",
          }
    }
    renderAvatar={[Function]}
    state="opened"
>
    [Function]
</Unknown>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <a
        className="undefined undefined"
>
        <a
                className="undefined "
        />
</a>,
      "className": "undefined ",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          undefined,
          <a
            className="undefined "
/>,
        ],
        "className": "undefined undefined",
      },
      "ref": null,
      "rendered": Array [
        undefined,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "undefined ",
          },
          "ref": null,
          "rendered": null,
          "type": "a",
        },
      ],
      "type": "a",
    },
    "type": "li",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <a
          className="undefined undefined"
>
          <a
                    className="undefined "
          />
</a>,
        "className": "undefined ",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            undefined,
            <a
              className="undefined "
/>,
          ],
          "className": "undefined undefined",
        },
        "ref": null,
        "rendered": Array [
          undefined,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "undefined ",
            },
            "ref": null,
            "rendered": null,
            "type": "a",
          },
        ],
        "type": "a",
      },
      "type": "li",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`SpeedDialItem snapshot: with preset 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown
    classes={[Function]}
    preset={
        Object {
            "avatar": "avatar",
            "button": "button",
            "firstItem": "firstItem",
            "item": "item",
            "label": "label",
            "list": "list",
            "root": "root",
          }
    }
    state="opened"
>
    [Function]
</Unknown>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <a
        className="undefined undefined"
>
        
</a>,
      "className": "undefined ",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          undefined,
          undefined,
        ],
        "className": "undefined undefined",
      },
      "ref": null,
      "rendered": Array [
        undefined,
        undefined,
      ],
      "type": "a",
    },
    "type": "li",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <a
          className="undefined undefined"
>
          
</a>,
        "className": "undefined ",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            undefined,
            undefined,
          ],
          "className": "undefined undefined",
        },
        "ref": null,
        "rendered": Array [
          undefined,
          undefined,
        ],
        "type": "a",
      },
      "type": "li",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
